2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c, include/bsp.h, startup/bspstart.c,
	startup/rtems-ctor.cc: Eliminate copies of the Configuration Table.
	Use the RTEMS provided accessor macros to obtain configuration
	fields.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h, startup/bspstart.c: Move interrupt_stack_size field
	from CPU Table to Configuration Table. Eliminate CPU Table from all
	ports. Delete references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Moved most of the remaining CPU Table fields to
	the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-08-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am: Save changes again to make tagger happy.

2007-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: You need main() to link all applications.
	There is no C++ specific way to link currently.

2007-07-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, startup/main.c: Now can link with C compiler and not
	require C++ compiler to link. The file rtems-ctor.cc is not being
	built but if there is a need for C++ code to run on this BSP, then it
	will have to be addressed. The simplest solution which might work is
	to check the RTEMS system state before calling bsp_start() in main().

2007-05-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/bspstart.c: Use uintptr_t for address arithmetics.
	* bsp_specs: Remove -qrtems_debug.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-30	Joel Sherrill <joel@OARcorp.com>

	* startup/rtems-ctor.cc: Conditionally disable non-GCC code.
